cmake_minimum_required(VERSION 3.29)
project(LeeTCode_C__)

set(CMAKE_CXX_STANDARD 17)

add_executable(LeeTCode_C__ main.cpp)

add_executable(01-mergeAlternately basic_of_programming/basic_realization/01-mergeAlternately.cpp)
add_executable(02-findTheDifference basic_of_programming/basic_realization/02-findTheDifference.cpp)
add_executable(03-strStr basic_of_programming/basic_realization/03-strStr.cpp)
add_executable(04-isAnagram basic_of_programming/basic_realization/04-isAnagram.cpp)
add_executable(05-repeatedSubstringPattern basic_of_programming/basic_realization/05-repeatedSubstringPattern.cpp)
add_executable(06-moveZeroes basic_of_programming/basic_realization/06-moveZeroes.cpp)
add_executable(07-plusOne basic_of_programming/basic_realization/07-plusOne.cpp)
add_executable(08-arraySign basic_of_programming/basic_realization/08-arraySign.cpp)
add_executable(09-canMakeArithmeticProgression basic_of_programming/basic_realization/09-canMakeArithmeticProgression.cpp)
add_executable(10-isMonotonic basic_of_programming/basic_realization/10-isMonotonic.cpp)
add_executable(11-romanToInt basic_of_programming/basic_realization/11-romanToInt.cpp)

add_executable(01-lengthOfLastWord basic_of_programming/built-in_functions/01-lengthOfLastWord.cpp)
add_executable(02-toLowerCase basic_of_programming/built-in_functions/02-toLowerCase.cpp)

add_executable(01-calPoints basic_of_programming/imitate/01-calPoints.cpp)