cmake_minimum_required(VERSION 3.29)
project(LeeTCode_C__)

set(CMAKE_CXX_STANDARD 17)

add_executable(LeeTCode_C__ main.cpp)

add_executable(01-mergeAlternately basic_of_programming/basic_realization/01-mergeAlternately.cpp)
add_executable(02-findTheDifference basic_of_programming/basic_realization/02-findTheDifference.cpp)
add_executable(03-strStr basic_of_programming/basic_realization/03-strStr.cpp)
add_executable(04-isAnagram basic_of_programming/basic_realization/04-isAnagram.cpp)
add_executable(05-repeatedSubstringPattern basic_of_programming/basic_realization/05-repeatedSubstringPattern.cpp)
add_executable(06-moveZeroes basic_of_programming/basic_realization/06-moveZeroes.cpp)
add_executable(07-plusOne basic_of_programming/basic_realization/07-plusOne.cpp)
add_executable(08-arraySign basic_of_programming/basic_realization/08-arraySign.cpp)
add_executable(09-canMakeArithmeticProgression basic_of_programming/basic_realization/09-canMakeArithmeticProgression.cpp)
add_executable(10-isMonotonic basic_of_programming/basic_realization/10-isMonotonic.cpp)
add_executable(11-romanToInt basic_of_programming/basic_realization/11-romanToInt.cpp)

add_executable(01-lengthOfLastWord basic_of_programming/built-in_functions/01-lengthOfLastWord.cpp)
add_executable(02-toLowerCase basic_of_programming/built-in_functions/02-toLowerCase.cpp)

add_executable(01-calPoints basic_of_programming/imitate/01-calPoints.cpp)
add_executable(02-judgeCircle basic_of_programming/imitate/02-judgeCircle.cpp)
add_executable(03-tictactoe basic_of_programming/imitate/03-tictactoe.cpp)
add_executable(04-isRobotBounded basic_of_programming/imitate/04-isRobotBounded.cpp)

add_executable(01-maximumWealth basic_of_programming/matrix/01-maximumWealth.cpp)
add_executable(02-diagonalSum basic_of_programming/matrix/02-diagonalSum.cpp)
add_executable(03-spiralOrder basic_of_programming/matrix/03-spiralOrder.cpp)
add_executable(04-setZeroes basic_of_programming/matrix/04-setZeroes.cpp)

add_executable(01-countOdds basic_of_programming/math/01-countOdds.cpp)
add_executable(02-average basic_of_programming/math/02-average.cpp)
add_executable(03-lemonadeChange basic_of_programming/math/03-lemonadeChange.cpp)
add_executable(04-largestPerimeter basic_of_programming/math/04-largestPerimeter.cpp)
add_executable(05-checkStraightLine basic_of_programming/math/05-checkStraightLine.cpp)
add_executable(06-addBinary basic_of_programming/math/06-addBinary.cpp)
add_executable(07-multiply basic_of_programming/math/07-multiply.cpp)

add_executable(01-mergeTwoLists basic_of_programming/LinkList/01-mergeTwoLists.cpp)
add_executable(02-reverseList basic_of_programming/LinkList/02-reverseList.cpp)

add_executable(01-maxVowels slidingWindow_doublePointers/definite-length_slidingWindow/01-maxVowels.cpp)
add_executable(02-fundMaxAverage slidingWindow_doublePointers/definite-length_slidingWindow/02-fundMaxAverage.cpp)
add_executable(03-numOfSubarrays slidingWindow_doublePointers/definite-length_slidingWindow/03-numOfSubarrays.cpp)
add_executable(04-getAverages slidingWindow_doublePointers/definite-length_slidingWindow/04-getAverages.cpp)
add_executable(05-minimumRecolors slidingWindow_doublePointers/definite-length_slidingWindow/05-minimumRecolors.cpp)
add_executable(06-decrypt slidingWindow_doublePointers/definite-length_slidingWindow/06-decrypt.cpp)
add_executable(07-maxSatisfied slidingWindow_doublePointers/definite-length_slidingWindow/07-maxSatisfied.cpp)
add_executable(08-hasAllCodes slidingWindow_doublePointers/definite-length_slidingWindow/08-hasAllCodes.cpp)
add_executable(09-maxSum slidingWindow_doublePointers/definite-length_slidingWindow/09-maxSum.cpp)
add_executable(10-maximumSubarraySum slidingWindow_doublePointers/definite-length_slidingWindow/10-maximumSubarraySum.cpp)
add_executable(11-maxScore slidingWindow_doublePointers/definite-length_slidingWindow/11-maxScore.cpp)
add_executable(12-maxFreq slidingWindow_doublePointers/definite-length_slidingWindow/12-maxFreq.cpp)

add_executable(01-lengthOfLongestSubstring slidingWindow_doublePointers/indefinite-length_slidingWindow/01-lengthOfLongestSubstring.cpp)
add_executable(02-maximumLengthSubstring slidingWindow_doublePointers/indefinite-length_slidingWindow/02-maximumLengthSubstring.cpp)

